--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>carlyd95.github.io by carlyd95</title>
+    <title>carlyd95's Repo'</title>
   </head>
 
   <body>
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>carlyd95.github.io</h1>
-            <h2>Cydia repo jailbreak tweaks themes github git carlyd95</h2>
+            <h1>carlyd95's Repo</h1>
+            <h2>Cydia Repo on GitHub Hosted by carlyd95</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -55,18 +55,19 @@
 • Go to Sources
 • Click edit at the top right
 • Click add at the top left
-• Click in the text field after "http://" and paste
+• Click in the text field after
+  "http://" and paste
 </code></pre>
 
 <p>Congratulations You Have Added a New Repo!</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Background</h3>
 
-<p>Shit Goes Here</p>
+<p>I'm not really a developer just a avid jailbreaker. Although i am interested in coding, I know close to nothing about it other than normal terminal use with ssh and git and similar command-line tools.  I can make themes, BootLogos and Zeppelin Logos so feel free to ask for simple theming rquests. </p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>IDK yet</h3>
 
 <p>More Stuff</p>
 
@@ -78,7 +79,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Life? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Need help with something? contact me at dcarltondunlap@me.com or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
