--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>carlyd95's Repo'</title>
+    <title>carlyd95's Repo</title>
   </head>
 
   <body>
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Carly-D95's Repo'</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Carly-D95's Repo</h3>
 
 <p>You can add this Cydia repository by following the steps below.</p>
 
@@ -79,7 +79,8 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Need help with something? contact me at dcarltondunlap@me.com or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Need help with something? contact me at <a href="mailto:dcarltondunlap@me.com?subject=GitHub Repo">
+    Send Email</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
