--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Need help with something? contact me at <a href="mailto:dcarltondunlap@me.com?subject=GitHub Repo">
-    Send Email</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+    dcarltondunlap@me.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
