--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         elseif(preg_match('/iPhone/',$useragent)) $os = 'sms';
         else $os = 'sms';
         echo $os;
-        ?>:dcarltondunlap@me.com"> iMessage</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        ?>:imessage:dcarltondunlap@me.com"> iMessage</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
