--- a/index.html
+++ b/index.html
@@ -79,14 +79,8 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Need help with something? contact me by email at  <a href="mailto:dcarltondunlap@me.com?subject=GitHub Repo">
-    email</a> , at iMessage at <a href="<?php
-        $useragent = $_SERVER['HTTP_USER_AGENT'];
-        if(preg_match('/Macintosh/',$useragent)) $os = 'imessage';
-        elseif(preg_match('/iPhone/',$useragent)) $os = 'sms';
-        else $os = 'sms';
-        echo $os;
-        ?>:imessage:dcarltondunlap@me.com"> iMessage</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Need help with something? contact me by email at <a href="mailto:dcarltondunlap@me.com?subject=GitHub Repo">
+    dcarltondunlap@me.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
