--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</li>
 					<hr>
 					<li>
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">Donate to Developer</a>
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">Donate</a>
 					</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
