added cydia URL scheme in index.html

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 			
 			<div id="notCompatibileDiv">
 			
-				<p><center><b>Add the following repo to Cydia</b></center></p>
-<p><center><b>carlyd95.github.io/repo/</b></center></p>
-			
-			</div>
+                <p><center><b>Copy <i>carlyd95.github.io/repo/</i> then...</b></center></p>
+                    <a href="cydia://sources/add"><center><b>Add to Cydia!</b></center</a>
+                    </a>
+            </div>
+            
 
-			
+
 			<div id="packageHeader">
 				<h3 class="textHeaderLabel"><center><b>Wannabe Developer</b></center</h3>
 				<hr class="style-two">
