--- a/repo/depics/dailytext.html
+++ b/repo/depics/dailytext.html
@@ -20,6 +20,13 @@
 class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 			
 			</div><!--Close Package Header Div-->
+			<div id="contentSingle">
+			<h3 class="textHeaderLabel">Screenshot</h3>
+		       </div>
+				<div id="contentBottom">
+<img class="pkgScreenshots" src="images/screenshots/dailytext.png">
+				</div><!--Close Package Header Div-->
+
 				<div id="contentSingle">
 				<h3 class="textHeaderLabel">In This Update</h3>
 			</div>
@@ -29,8 +36,8 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 <li><p>Removed the km x/x p. x - Kingdom Ministry--xxxx which was irrelevant to the Daily Text. Unless the website changes its format this will likely be the final version or if I have better ideas how to display or trigger it. &#128522;</p></li>
 <li><p><strong>2.3-1</strong></p></li>
 <li><p>Removed part of the postinst script that displayed the text after initial install and each upgrade...</p></li>
-<li><p>2.3</p></li>
-<li><p><strong>moshed help me resolve a problem that caused padding in one of the date variables to not have a space causing the date to still be shown and duplicate the initial scripture.</strong></p></li>
+<li><p><strong>2.3</strong></p></li>
+<li><p>moshed help me resolve a problem that caused padding in one of the date variables to not have a space causing the date to still be shown and duplicate the initial scripture.</p></li>
 				</ul>			
 			</div><!--Close Package Header Div-->
 			
@@ -39,14 +46,23 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>This package is a simple command line tool that fetches the Daily Text at 5:30 AM each morning from <a href="http://wol.jw.org" target="_blank">http://wol.jw.org</a> then saves it to /Library/DailyText/DailyText.txt. simply type <i>txt</i> to display the text!</p></li>
+					<li><p>This package is a simple command line tool that fetches the Daily Text at 5:30 AM each morning from <a href="http://wol.jw.org" target="_blank">http://wol.jw.org</a> then saves it to /Library/DailyText/DailyText.txt. simply type <i>txt</i> to display the text!</p></li> </ul> </div>
+
+			 <div id="contentSingle">
+				     <h3 class="textHeaderLabel">Links</h3>
+			 </div>
+			 <div id="contentBottom">
+					<ul>
 					<hr>
 					<li>
 						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
-					<hr>
+					</li> </ul>
+			 </div>
+			 <div id="contentBottom">
+					<ul> <hr>
 					<li>
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
+</div>
 					</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
