--- a/repo/depics/sendrsa.html
+++ b/repo/depics/sendrsa.html
@@ -19,9 +19,16 @@
 				<img class="repoDescription" src="images/sendrsa.png">
 				<h2
 class="repoDescriptionHeader">&nbsp;&nbsp;sendrsa</h3>			   
-			</div><!--Close Package Header Div-->
+			</div><!--Close Package Header Div--> 
+			<div id="contentSingle">
+				<h3 class="textHeaderLabel">Description</h3>
+			</div>
+			<div id="contentBottom">
+				<ul>
+					<li><p>This package is a simple command line tool that sends your ssh keys to a remote device to enable passwordless remote login.</p></li>
+</div>
 
-				<div id="contentSingle">
+			 <div id="contentSingle">
 			       
 			    <h3 class="textHeaderLabel">Screenshot</h3>
 </div>
@@ -40,19 +47,20 @@ class="repoDescriptionHeader">&nbsp;&nbsp;sendrsa</h3>
 				</ul>			
 			</div><!--Close Package Header Div-->
 			
-			<div id="contentSingle">
-				<h3 class="textHeaderLabel">Description</h3>
-			</div>
-			<div id="contentBottom">
-				<ul>
-					<li><p>This package is a simple command line tool that sends your ssh keys to a remote device to enable passwordless remote login.</p></li>
-					<hr>
+			 <div id="contentSingle">
+				     <h3 class="textHeaderLabel">Links</h3>
+			 </div>
+			 <div id="contentBottom">
+					<ul>
+					
 					<li>
 						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
-					<hr>
+					</li> </ul>
+<hr>
+					<ul>
 					<li>
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
+</div>
 					</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
