--- a/repo/depics/repo.html
+++ b/repo/depics/repo.html
@@ -14,28 +14,28 @@
 		<div class="middle">
 		<div id="container">
 			
-			<div id="contentBottom">
-				<img class="repoDescription" src="images/JW.png">
+			<div id="contentSingle">
+				<img class="repoDescription" src="images/repoLogo.png">
 				<h2
-class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
+class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel"><b>Description</b></h3>
+				<h3 class="textHeaderLabel">Description</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>This package is a simple command line tool that fetches the Daily Text at 5:30 AM each morning from <a href="http://wol.jw.org" target="_blank">http://wol.jw.org</a> then saves it to /Library/DailyText/DailyText.txt. simply type <i>txt</i> to display the text!</p></li> </ul> </div>
+					<li><p>I'm not a developer, just an avid jailbreaker. However I can make theme type packages such as BootLogos, Zeppelin logos, respring logos etc. Although I hope to learn to code someday...</p></li> </ul> </div>
 
 			<div id="contentSingle">
-			<h3 class="textHeaderLabel"><b>Screenshot</b></h3>
+			<h3 class="textHeaderLabel">Screenshot</h3>
 		       </div>
 				<div id="contentBottom">
 <img class="pkgScreenshots" src="images/screenshots/dailytext.png">
 				</div><!--Close Package Header Div-->
 
 				<div id="contentSingle">
-				<h3 class="textHeaderLabel"><b>Recent Updates</b></h3>
+				<h3 class="textHeaderLabel">Recent Updates</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
@@ -51,30 +51,24 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 			</div><!--Close Package Header Div-->
 
 			 <div id="contentSingle">
-				     <h3 class="textHeaderLabel"><b>Links</b></h3>
+				     <h3 class="textHeaderLabel">Links</h3>
 			 </div>
 			 <div id="contentBottom">
 					<ul>
 					
 					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">GitHub</a>
+						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
 					</li> </ul>
-<hr>
-<ul>
-<li>
-						<a href="sms:dcarltondunlap@me.com">iMessage</a>
-					</li>
-					</ul>
 <hr>
 					<ul>
 					<li>
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate</a>
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
 </div>
 					</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel"><b>Compatibility</b></h3>
+				<h3 class="textHeaderLabel">Compatibility</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
@@ -82,7 +76,7 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 				</ul>			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
-				<h3 class="textHeaderLabel"><b>Dependencies</b></h3>
+				<h3 class="textHeaderLabel">Dependencies</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
