--- a/repo/depics/sendrsa.html
+++ b/repo/depics/sendrsa.html
@@ -14,7 +14,7 @@
 		<div class="middle">
 		<div id="container">
 			
-			<div id="contentSingle">
+			<div id="contentBottom">
 		       
 				<img class="repoDescription" src="images/sendrsa.png">
 				<h2
@@ -54,12 +54,18 @@ class="repoDescriptionHeader">&nbsp;&nbsp;sendrsa</h3>
 					<ul>
 					
 					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+						<a href="https://github.com/carlyd95/" target="_blank">GitHub</a>
 					</li> </ul>
+<hr>
+<ul>
+<li>
+						<a href="sms:dcarltondunlap@me.com">iMessage</a>
+					</li>
+					</ul>
 <hr>
 					<ul>
 					<li>
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate</a>
 </div>
 					</li>
 				</ul>			
