--- a/repo/depics/dailytext.html
+++ b/repo/depics/dailytext.html
@@ -25,15 +25,13 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>This package is a simple command line tool that fetches the Daily Text at 5:30 AM each morning from <a href="http://wol.jw.org" target="_blank">http://wol.jw.org</a> then saves it to /Library/DailyText/DailyText.txt. simply type <i>txt</i> to display the text!</p></li> </ul> </div>
+					<li><p>This package is a simple command line tool that fetches the Daily Text at 5:30 AM each morning from <a href="http://wol.jw.org">JW.org</a> then saves it to /Library/DailyText/DailyText.txt. simply type <i>txt</i> to display the text!
+<br>
+<hr>
+I also recommend downloading <a href="cydia://package/com.jerryen.quickactivator">QuickActivator</a> and the <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/&package=com.carlyd95.jworgquickactivatorglyph">JW.org Glyph</a> for it and set up an activator listener to run <i>txt</i> so you can quickly get the daily text from your control center. This is shown in the video below</p></li> </ul>
+</div><!--Close Package Header Div-->
 
-			<div id="contentSingle">
-			<h3 class="textHeaderLabel"><b>Screenshot</b></h3>
-		       </div>
-				<div id="contentBottom">
-<img class="pkgScreenshots" src="images/screenshots/dailytext.png">
-				</div><!--Close Package Header Div-->
-
+		
 
 
 			 <div id="contentSingle">
@@ -44,7 +42,11 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Daily Text Script</h3>
 					
 					<li>
 <center>
-						<iframe width="268" height="151" src="http://carlyd95.github.io/repo/depics/exvid/dailytext.mov" frameborder="0" allowfullscreen></iframe>
+
+        <video src="exvid/dailytext.mp4" poster=images/screenshots/dailytext.png width=360 controls>
+</video>
+
+
 </center>
 					</li>
                                  </ul>
