--- a/repo/depics/dyneppelin.html
+++ b/repo/depics/dyneppelin.html
@@ -44,7 +44,9 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Dyneppelin</h3>
 					
 					<li>
 <center>
-						<iframe width="268" height="151" src="http://carlyd95.github.io/repo/depics/exvid/dyneppelin.mp4" frameborder="0" allowfullscreen></iframe>
+
+        <video src="exvid/dyneppelin.mp4" poster=images/screenshots/dyneppelinposter.jpg width=360 controls>
+
 </center>
 					</li>
                                  </ul>
