--- a/repo/depics/dyneppelin.html
+++ b/repo/depics/dyneppelin.html
@@ -31,7 +31,9 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Dyneppelin</h3>
 			<h3 class="textHeaderLabel"><b>Instructions</b></h3>
 		       </div>
 				<div id="contentBottom">
+<center>
 <img class="pkgScreenshots" src="images/screenshots/dyneppelinhelp.png">
+</center>
 				</div><!--Close Package Header Div-->
 
 
