--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 					</li>
 <hr>
 					<li>
+						<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
+					</li>
+<hr>
+					<li>
 						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
 					</li>
 <hr>
