--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 					<li>
 						<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
 					</li>
+<hr>
+
+                                        <li>
+                                                <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">L:TotV</a>
+<hr>
+                                        <li>
+<hr>
+
+                                        <li>
+                                                <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
+<hr>
+                                        <li>
+
 </div>
 					</li>
 				</ul>			
