--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 <hr>
 
                                         <li>
-                                                <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">L:TotV</a>
+                                                <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops.pdf</a>
 <hr>
                                         <li>
                                                 <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
-<hr>
+
                                         <li>
 
 </div>
