--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
                                         <li>
 <hr>
                                         <li>
-                                                <a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__www.instagram.com_fat-5Fleaves-5Fand-5Flong-5Fspines_&d=DwMGaQ&c=RTeKZtrutbwfr0CyFOEmTYBZxm_B1KJOO0ckfHRv_LY&r=iYKdPSqdvf8kkfxb6sAKeYp0sPRexMft8lRJmT1_b6s&m=lY7duhW74hxQIC8hRmO9sP7oT8z5M89i1Ro17lHwgCM&s=0QZwK5guvSiExXiaBTXMImaoCkqGCEEiZxHyQYlz8Vc&e=" target="_blank">plantstagram</a>
+  						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
 
                                         <li>
 </div>
