--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
                                         <li>
 <hr>
                                         <li>
+                                                <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
+
+                                        <li>
+<hr>
+                                        <li>
   						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
 
                                         <li>
