--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>I'm not a developer, just an avid jailbreaker.  However I can make theme type packages such as BootLogos, Zeppelin logos, respring logos and useful scripts.  Although I'm slowly learning objective c...</p></li> </ul> </div>
+					<li><p>Old cydia repo... now used for homebrew and succulent cultivation notes :)</p></li> </ul> </div>
 
 			 <div id="contentSingle">
 				     <h3 class="textHeaderLabel">Links</h3>
@@ -53,6 +53,7 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 				
 					<li>
 						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+						</li>
 <hr>
 					<li>
 						<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
@@ -62,20 +63,25 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
                                         <li>
                                                 <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops.pdf</a>
 <hr>
-                                        <li>
+                                        </li>
                                                 <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
 
-                                        <li>
+                                        </li>
 <hr>
                                         <li>
                                                 <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
 
-                                        <li>
+                                        </li>
 <hr>
                                         <li>
   						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
 
+                                        </li>
+<hr>
                                         <li>
+  						<a href="https://carlyd95.github.io/hobby/beer/recipes" target="_blank">Brew Recipes</a>
+
+                                        </li>
 </div>
 					</li>
 				</ul>			
