--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
                                         </li>
 <hr>
                                         <li>
-  						<a href="https://carlyd95.github.io/hobby/beer/recipes" target="_blank">Brew Recipes</a>
+  						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Brew Recipes</a>
 
                                         </li>
 </div>
