--- a/hobby/plants/seeds4sale.html
+++ b/hobby/plants/seeds4sale.html
@@ -26,66 +26,167 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Carlton's Succulents Seeds</h3>
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>Shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  The quantatity of seeds per packet varies by plant family.  For the time being U.S. orders only.</p></li> </ul> </div>
+					<li><p>Shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  The quantatity of seeds per packet varies by plant family.  For the time being U.S. orders only.</p></li> 
+				</ul> 
+			</div>
 
-			 <div id="contentSingle">
-				     <h3 class="textHeaderLabel">Mesembs (Aizoaceae) | 25 seeds</h3>
-			 </div>
-			 <div id="contentBottom">
-					<ul>
+					 <div id="contentSingle">
+						     <h3 class="textHeaderLabel">Mesembs (Aizoaceae) | 25 seeds</h3>
+					 </div>
+					 <div id="contentBottom">
+							<ul>
+								<li>
+										<a href="" target="_blank">Gibbeaum dispar</a>
+								</li>
+									<hr>
+								<li>
+										<a href="" target="_blank">Lithops amicorum (TOK67)</a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+					</div>
+				<div id="contentSingle">
+						     <h3 class="textHeaderLabel">Cacti (Cactaceae) | 10 seeds</h3>
+				</div>
+					<div id="contentBottom">
+							<ul>
+									<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
 
-					<li>
-						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Lithops juilii C297</a>
-							$5
-					</li>
-<hr>
-					<li>
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
+					</div>
+					<div id="contentSingle">
+						     <h3 class="textHeaderLabel">Haworthia & Friends (Asphodelaceae) | 10 seeds</h3>
+					 </div>
+					 <div id="contentBottom">
+							<ul>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank"></a>
+								</li>
 
-</div>
-			  <div id="contentSingle">
-				     <h3 class="textHeaderLabel">Cacti (Cactaceae) | 10 seeds</h3>
-			 </div>
-			 <div id="contentBottom">
-					<ul>
-
-					<li>
-						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
-
-</div>
-			  <div id="contentSingle">
-				     <h3 class="textHeaderLabel">Haworthia & Friends (Asphodelaceae) | 10 seeds</h3>
-			 </div>
-			 <div id="contentBottom">
-					<ul>
-
-					<li>
-						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
-
-</div>
+					</div>
 					</li>
 				</ul>			
 			</div><!--Close Package Header Div-->
