--- a/hobby/plants/seeds4sale.html
+++ b/hobby/plants/seeds4sale.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-		Carlton's Succulent Seeds
+		Carlton's Karoo
 		</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
 		
@@ -14,11 +14,10 @@
 		<div class="middle">
 		<div id="container">
 			
-			<div id="contentSingle">
+			<div id="contentSingleTop">
 				<img src="https://scontent-atl3-1.cdninstagram.com/vp/18f6b3b83638807f29dffe3e39f04ccd/5C6191FE/t51.2885-19/s320x320/40986491_2092222011094924_4038225605722898432_n.jpg" 
-				alt="" class="croppedImage">
-				<h2
-class="repoDescriptionHeader">&nbsp;&nbsp;Carlton's Succulents Seeds</h3>
+				class="croppedImage">
+				<h2 class="repoDescriptionHeader">&nbsp;Carlton's Karoo</h2>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
@@ -44,15 +43,15 @@ class="repoDescriptionHeader">&nbsp;&nbsp;Carlton's Succulents Seeds</h3>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops</a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops</a>
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops</a>
 								</li>
 									<hr>
 								<li>
