--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="middle">
 		<div id="container">
 			
-			<div id="contentSingle">
+			<div id="contentSingleTop">
 				<img class="repoDescription" src="depics/images/repoLogo.png">
 				<h2
 class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
@@ -32,56 +32,53 @@ class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
 			 </div>
 			 <div id="contentBottom">
 					<ul>
-
-					<li>
-						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
-					</li>
-<hr>
-					<li>
-						<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
-					</li>
-<hr>
-				
-					<li>
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
-</li>
-<hr>
-				
-					<li>
-						<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+						<li>
+	  						<a href="https://carlyd95.github.io/hobby/plants/seeds4sale.html" target="_blank">Carlton's Karoo: Seeds & Plants</a>
+	  					</li>
+	  						<hr>
+						<li>
+							<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://carlyd95.github.io/repo/" target="_blank">Add My Repo</a>
 						</li>
-<hr>
-					<li>
-						<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
-					</li>
-<hr>
+							<hr>
+						<li>
+							<a href="https://dailytext.000webhostapp.com/" target="_blank">JW Daily Text Subscription</a>
+						</li>
+							<hr>
+						<li>
+							<a href="https://github.com/carlyd95/" target="_blank">My GitHub</a>
+						</li>
+							<hr>
+						<li>
+							<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=dcarltondunlap%40hotmail%2ecom&lc=US&item_name=carlyd95&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" target="_blank">Donate to Developer</a>
+						</li>
+							<hr>
+						<li>
+							<a href="http://carlyd95.github.io/KaraokeList.csv" target="_blank">Karaoke Song List</a>
+						</li>
+							<hr>
+						<li>
+							<a href="sms:dcarltondunlap@me.com" target="_blank">iMessage Me</a>
+						</li>
+							<hr>
+	                    <li>
+	                            <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops.pdf</a>
+							<hr>
+	                    </li>
+	                            <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
+						</li>
+							<hr>
+	                    <li>
+	                            <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
+	                    </li>
+							<hr>
+	                    <li>
+	  						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
+	                    </li>
+							<hr>
+	                    <li>
+	  						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Brew Recipes</a>
 
-                                        <li>
-                                                <a href="http://carlyd95.github.io/hobby/plants/lithops.pdf" target="_blank">Lithops.pdf</a>
-<hr>
-                                        </li>
-                                                <a href="http://carlyd95.github.io/data/ip.txt" target="_blank">RPIP</a>
-
-                                        </li>
-<hr>
-                                        <li>
-                                                <a href="http://carlyd95.github.io/hobby/plants/wishlist.txt" target="_blank">Plant Wishlist</a>
-
-                                        </li>
-<hr>
-                                        <li>
-  						<a href="https://www.instagram.com/fat_leaves_and_long_spines/" target="_blank">plantstagram</a>
-
-                                        </li>
-<hr>
-                                        <li>
-  						<a href="https://carlyd95.github.io/hobby/beer" target="_blank">Brew Recipes</a>
-
-                                        </li>
+	                    </li>
 </div>
 					</li>
 				</ul>			
