--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div id="contentSingleTop">
 				<img class="repoDescription" src="depics/images/repoLogo.png">
 				<h2
-class="repoDescriptionHeader">&nbsp;&nbsp;carlyd95</h3>
+class="repoDescriptionHeader">&nbsp;carlyd95</h3>
 			
 			</div><!--Close Package Header Div-->
 			<div id="contentSingle">
