--- a/hobby/plants/seeds4sale.html
+++ b/hobby/plants/seeds4sale.html
@@ -10,7 +10,9 @@
 	</head>
 
 	<body>
-		
+		<div class="outer">
+		<div class="middle">
+		<div id="container">
 			
 			<div id="contentSingleTop">
 				<img src="https://scontent-atl3-1.cdninstagram.com/vp/18f6b3b83638807f29dffe3e39f04ccd/5C6191FE/t51.2885-19/s320x320/40986491_2092222011094924_4038225605722898432_n.jpg" 
@@ -41,7 +43,7 @@
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops</a>
+									<a href="" target="_blank">Lithops </a>
 								</li>
 									<hr>
 								<li>
