--- a/hobby/plants/seeds4sale.html
+++ b/hobby/plants/seeds4sale.html
@@ -43,7 +43,7 @@
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops </a>
+									<a href="" target="_blank">Lithops 1</a>
 								</li>
 									<hr>
 								<li>
