--- a/ck/index.html
+++ b/ck/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="content-type"
+content="text/html;charset=utf-8" />
 		<title>
 		Carlton's Karoo
 		</title>
@@ -35,55 +37,83 @@
 					 <div id="contentBottom">
 							<ul>
 								<li>
-										<a href="" target="_blank">Gibbeaum dispar</a>
+										<a href="" target="_blank">Lithops amicorum (TOK67)</a> $5
 								</li>
 									<hr>
 								<li>
-										<a href="" target="_blank">Lithops amicorum (TOK67)</a>
+										<a href="" target="_blank">Lithops halii C45</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops 7</a>
+									<a href="" target="_blank">Lithops herrei C213</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops</a>
+									<a href="" target="_blank">Lithops hookeri v. lutea</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank">Lithops</a>
+									<a href="" target="_blank">Lithops julii C216</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops julii C297</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana v. bella</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana “lericheana”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana “mickbergensis”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana “signalberg”</a> $5
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana “summitatum”</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana v. tischeri C181</a> $6
 								</li>
 									<hr>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Lithops karasmontana C227</a> $5
+								</li>
+									<hr>
+								<li> 
+									<a href="" target="_blank">Lithops lesliei</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops marmorata “framesii”</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops naureeniae C304</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops schwantesii C79</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops schwantesii v. rugosa</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops schwantesii v. rugosa C192</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lithops schwantesii “urikoensis”</a> $7
 								</li>
 					</div>
 				<div id="contentSingle">
@@ -92,48 +122,46 @@
 					<div id="contentBottom">
 							<ul>
 									<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Ariocarpus fissuratus</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Ariocarpus retusus</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gymnocalycium ragonesi</a> $3
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gymnocalycium damsii v. rotundulum hybrid</a> $3
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gymnocalycium friedrichii hybrid</a> $3
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lophophora diffusa cv. ‘Koike’</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lophophora koehresii</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Lophophora williamsii</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Melocactus albicephalus</a> $4
+						<!--
 								</li>
 									<hr>
 								<li>
 									<a href="" target="_blank"></a>
 								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
+						-->
 
 					</div>
 					<div id="contentSingle">
@@ -142,7 +170,32 @@
 					 <div id="contentBottom">
 							<ul>
 								<li>
-									<a href="" target="_blank"></a>
+									<a href="" target="_blank">Gasteria armstrongii hybrid</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gasteria cv. ‘Polliwog’ hybrid</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gasteria baylissiana x liliputana</a> $5
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gasteria (batesiana x armstrongii) hybrid</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Gasteria cv. ‘Little Warty’ hybrid</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Haworthiopsis venosa hybrid?</a> $4
+								</li>
+									<hr>
+								<li>
+									<a href="" target="_blank">Haworthiopsis limifolia</a> $4
+						<!--
 								</li>
 									<hr>
 								<li>
@@ -160,30 +213,7 @@
 								<li>
 									<a href="" target="_blank"></a>
 								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank"></a>
-								</li>
+						-->
 
 					</div>
 					</li>
