--- a/ck/index.html
+++ b/ck/index.html
@@ -32,7 +32,7 @@ content="text/html;charset=utf-8" />
 			</div>
 
 					 <div id="contentSingle">
-						     <h3 class="textHeaderLabel">Mesembs (Aizoaceae) | 25 seeds</h3>
+						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds / pack</h3>
 					 </div>
 					 <div id="contentBottom">
 							<ul>
@@ -88,10 +88,6 @@ content="text/html;charset=utf-8" />
 									<a href="" target="_blank">Lithops karasmontana C227</a> $5
 								</li>
 									<hr>
-								<li> 
-									<a href="" target="_blank">Lithops lesliei</a> $5
-								</li>
-									<hr>
 								<li>
 									<a href="" target="_blank">Lithops marmorata “framesii”</a> $5
 								</li>
@@ -117,7 +113,7 @@ content="text/html;charset=utf-8" />
 								</li>
 					</div>
 				<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Cacti (Cactaceae) | 10 seeds</h3>
+						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds / pack</h3>
 				</div>
 					<div id="contentBottom">
 							<ul>
@@ -165,7 +161,7 @@ content="text/html;charset=utf-8" />
 
 					</div>
 					<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Haworthia & Friends (Asphodelaceae) | 10 seeds</h3>
+						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds / pack</h3>
 					 </div>
 					 <div id="contentBottom">
 							<ul>
@@ -188,15 +184,7 @@ content="text/html;charset=utf-8" />
 								<li>
 									<a href="" target="_blank">Gasteria cv. ‘Little Warty’ hybrid</a> $4
 								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Haworthiopsis venosa hybrid?</a> $4
-								</li>
-									<hr>
-								<li>
-									<a href="" target="_blank">Haworthiopsis limifolia</a> $4
 						<!--
-								</li>
 									<hr>
 								<li>
 									<a href="" target="_blank"></a>
