--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ class="repoDescriptionHeader">&nbsp;carlyd95</h3>
 			 <div id="contentBottom">
 					<ul>
 						<li>
-	  						<a href="https://carlyd95.github.io/hobby/plants/seeds4sale.html" target="_blank">Carlton's Karoo: Seeds & Plants</a>
+	  						<a href="https://carlyd95.github.io/ck" target="_blank">Carlton's Karoo: Seeds & Plants</a>
 	  					</li>
 	  						<hr>
 						<li>
