--- a/ck/index.html
+++ b/ck/index.html
@@ -27,12 +27,15 @@ content="text/html;charset=utf-8" />
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>Shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  The quantatity of seeds per packet varies by plant family.  For the time being U.S. orders only.</p></li> 
+					<li><p>For the time being U.S. orders only...
+								<br>
+								<br>
+							The shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  Seed amount per pack differs according to familial rank and is displayed to the right of each botanical family.</p></li> 
 				</ul> 
 			</div>
 
 					 <div id="contentSingle">
-						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds / pack</h3>
+						     <h3 class="textHeaderLabel">Aizocaceae | 25 seeds </h3>
 					 </div>
 					 <div id="contentBottom">
 							<ul>
@@ -113,7 +116,7 @@ content="text/html;charset=utf-8" />
 								</li>
 					</div>
 				<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds / pack</h3>
+						     <h3 class="textHeaderLabel">Cactaceae | 10 seeds</h3>
 				</div>
 					<div id="contentBottom">
 							<ul>
@@ -161,7 +164,7 @@ content="text/html;charset=utf-8" />
 
 					</div>
 					<div id="contentSingle">
-						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds / pack</h3>
+						     <h3 class="textHeaderLabel">Asphodelaceae | 10 seeds</h3>
 					 </div>
 					 <div id="contentBottom">
 							<ul>
