--- a/ck/index.html
+++ b/ck/index.html
@@ -17,7 +17,7 @@ content="text/html;charset=utf-8" />
 		<div id="container">
 			
 			<div id="contentSingleTop">
-				<img src="https://scontent-atl3-1.cdninstagram.com/vp/18f6b3b83638807f29dffe3e39f04ccd/5C6191FE/t51.2885-19/s320x320/40986491_2092222011094924_4038225605722898432_n.jpg" 
+				<img src="depics/images/logo.jpg" 
 				class="croppedImage">
 				<h2 class="repoDescriptionHeader">Carlton's<br>Karoo</h2>
 			
@@ -27,10 +27,13 @@ content="text/html;charset=utf-8" />
 			</div>
 			<div id="contentBottom">
 				<ul>
-					<li><p>For the time being U.S. orders only...
+					<li>
+						<p>For the time being U.S. orders only...
 								<br>
 								<br>
-							The shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  Seed amount per pack differs according to familial rank and is displayed to the right of each botanical family.</p></li> 
+							The shipping is $2 for up to 6 packs of seeds.  $0.50 for each additional 4 packs.  Seed amount per pack differs according to familial rank and is displayed to the right of each botanical family.  If seeds are the product of unknown hybridization the mother plant will be displayed. 
+						</p>
+					</li> 
 				</ul> 
 			</div>
 
